--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-01.png" alt="Image 1" class="img-fluid">
                           <figcaption>
-                            <h2><i>Physical Health <span>Exercise!</span></i></h2>
+                            <h2><i>Gamis <span>Elegan !</span></i></h2>
                           </figcaption>
                         </figure>
                       </a>
@@ -220,7 +220,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-02.png" alt="Image 2" class="img-fluid">
                           <figcaption>
-                            <h2><i>Rain on Glass <span>Second Image</span></i></h2>
+                            <h2><i>Kaftan <span></span></i></h2>
                           </figcaption>
                         </figure>
                       </a>
@@ -228,7 +228,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-03.png" alt="Image 3" class="img-fluid">
                           <figcaption>
-                            <h2><i><span>Sea View</span> Mega City</i></h2>
+                            <h2><i><span>Kaftan</span></i></h2>
                           </figcaption>
                         </figure>
                       </a>
@@ -236,7 +236,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-04.png" alt="Image 4" class="img-fluid">
                           <figcaption>
-                            <h2><i>Dream Girl <span>Thoughts</span></i></h2>
+                            <h2><i>Gamis<span></span></i></h2>
                           </figcaption>
                         </figure>
                       </a>
@@ -244,7 +244,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-05.png" alt="Image 5" class="img-fluid">
                           <figcaption>
-                            <h2><i><span>Workstation</span> Offices</i></h2>
+                            <h2><i><span>Gamis</span> </i></h2>
                           </figcaption>
                         </figure>
                       </a>
@@ -252,7 +252,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-06.png" alt="Image 6" class="img-fluid">
                           <figcaption>
-                            <h2><i>Just Above <span>The City</span></i></h2>
+                            <h2><i>Kaftan <span></span></i></h2>
                           </figcaption>
                         </figure>
                       </a>
@@ -260,7 +260,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-01.png" alt="Image 7" class="img-fluid">
                           <figcaption>
-                            <h2><i>Another <span>Exercise Time</span></i></h2>
+                            <h2><i>Gamis <span></span></i></h2>
                           </figcaption>
                         </figure>
                       </a>
@@ -268,7 +268,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-02.png" alt="Image 8" class="img-fluid">
                           <figcaption>
-                            <h2><i>Repeated <span>Image Spot</span></i></h2>
+                            <h2><i>Kaftan <span></span></i></h2>
                           </figcaption>
                         </figure>
                       </a>
