--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ https://www.tooplate.com/view/2117-infinite-loop
             <div class="col-12">
                 <div class="mx-auto tm-gallery-container">
                     <div class="grid tm-gallery">
-                      <a href="img/gallery-img-01.jpg">
+                      <a href="img/gallery-img-01.png">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-01.png" alt="Image 1" class="img-fluid">
                           <figcaption>
@@ -216,7 +216,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-02.jpg">
+                      <a href="img/gallery-img-02.png">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-02.png" alt="Image 2" class="img-fluid">
                           <figcaption>
@@ -224,7 +224,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-03.jpg">
+                      <a href="img/gallery-img-03.png">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-03.png" alt="Image 3" class="img-fluid">
                           <figcaption>
@@ -232,7 +232,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-04.jpg">
+                      <a href="img/gallery-img-04.png">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-04.png" alt="Image 4" class="img-fluid">
                           <figcaption>
@@ -240,7 +240,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-05.jpg">
+                      <a href="img/gallery-img-05.png">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-05.png" alt="Image 5" class="img-fluid">
                           <figcaption>
@@ -248,7 +248,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-06.jpg">
+                      <a href="img/gallery-img-06.png">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-06.png" alt="Image 6" class="img-fluid">
                           <figcaption>
@@ -256,7 +256,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-01.jpg">
+                      <a href="img/gallery-img-01.png">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-01.png" alt="Image 7" class="img-fluid">
                           <figcaption>
@@ -264,7 +264,7 @@ https://www.tooplate.com/view/2117-infinite-loop
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="img/gallery-img-02.jpg">
+                      <a href="img/gallery-img-02.png">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/gallery-tn-02.png" alt="Image 8" class="img-fluid">
                           <figcaption>
