--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ https://www.tooplate.com/view/2117-infinite-loop
           <p class="mb-0">
           Copyright &copy; 2019 BordirTasik
           
-          . <a rel="nofollow" href="https://www.tooplate.com" title="HTML templates">Designed by Zetart Studio</a></p>
+          . <a rel="nofollow" href="https://instagram.com/zamzamariyatna" title="HTML templates">Designed by Zetart Studio</a></p>
         </footer>
 
     </section>
